src/objects/Extended_Support__c.object
<CustomObject>
    <description>Created for Shannon McColloch.  Used to track Extended Support records.  Related to Contracts and Accounts.</description>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName &amp;&quot; &quot; &amp; Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Extended Supports</relationshipLabel>
        <relationshipName>Extended_Supports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Begin_Charging_Extended_Support__c</fullName>
        <description>Date field use to denote when Extended Support should begin.</description>
        <label>Begin Charging Extended Support</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Email_Formula__c</fullName>
        <formula>Account__r.Customer_Relationship_Mgr__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM Email Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Email__c</fullName>
        <inlineHelpText>Populated by WF.  Used for WF Email Alert.</inlineHelpText>
        <label>CRM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Comments_and_Notes__c</fullName>
        <label>Comments and Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to related Contract record.</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Extended Supports</relationshipLabel>
        <relationshipName>Extended_Supports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Support_Fees__c</fullName>
        <description>Currency type for the Support Fees and the License Fees in the Extended Support object.</description>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Product_Version__c</fullName>
        <formula>TEXT(Product__r.Current_Product_Version__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from related Product record.</inlineHelpText>
        <label>Current Product Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Manager__c</fullName>
        <formula>Account__r.Customer_Relationship_Mgr__r.FirstName  &amp; &apos; &apos; &amp;  Account__r.Customer_Relationship_Mgr__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer Relationship Manager from related Account Record.</inlineHelpText>
        <label>CRM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Extended_Support_Increases_to_60__c</fullName>
        <formula>Begin_Charging_Extended_Support__c  + 730</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Extended Support Increases to 60%</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sustaining_Support_Begins__c</fullName>
        <formula>IF(Ver__c == &apos;PC7&apos; || Ver__c == &apos;PC8&apos; || Ver__c == &apos;BC7&apos; || Ver__c == &apos;BC8&apos; || Ver__c == &apos;CC7&apos; || Ver__c == &apos;CC8&apos;, Extended_Support_Begins__c + 1095, Extended_Support_Begins__c + 1825)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sustaining Support Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Support_Begins__c</fullName>
        <description>Defaults date based on related product record.  Uses custom field Ver to keep the compile length under 5000.  Ver is populated by Field update Extended_Support_Set_Ver_Field.</description>
        <formula>CASE(Ver__c,&apos;PC7&apos;,DATEVALUE(&quot;2018-09-01&quot;),&apos;PC8&apos;,DATEVALUE(&quot;2020-10-01&quot;),&apos;PC4&apos;,DATEVALUE(&quot;2014-12-01&quot;),&apos;PC3&apos;,DATEVALUE(&quot;2013-10-01&quot;),&apos;CC4&apos;,DATEVALUE(&quot;2011-12-01&quot;),&apos;CC5&apos;,DATEVALUE(&quot;2013-05-01&quot;),&apos;CC6&apos;,DATEVALUE(&quot;2015-01-01&quot;),&apos;CC7&apos;,DATEVALUE(&quot;2018-09-01&quot;),&apos;CC8&apos;,DATEVALUE(&quot;2020-10-01&quot;),&apos;BC2&apos;,DATEVALUE(&quot;2013-02-01&quot;),&apos;BC3&apos;,DATEVALUE(&quot;2015-01-01&quot;),&apos;BC7&apos;,DATEVALUE(&quot;2018-09-01&quot;),&apos;BC8&apos;,DATEVALUE(&quot;2020-10-01&quot;),

null)</formula>
        <label>Extended Support Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Fees__c</fullName>
        <description>Used to capture License Fees</description>
        <label>License Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <picklist>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perpetual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Language_Description__c</fullName>
        <label>Non-Standard Language Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Master of Extended Support custom object.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Extended Supports</relationshipLabel>
        <relationshipName>Extended_Supports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact from Contract record.</description>
        <inlineHelpText>Primary Contact must be related to Account listed in Account field.</inlineHelpText>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Primary Contact does not belong to related Account.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Extended Supports</relationshipLabel>
        <relationshipName>Extended_Supports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>TEXT(Product__r.Products__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from related Product record.</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <formula>Product_Name__c &amp;&apos; &apos; &amp; Current_Product_Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to product custom object.</description>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Extended Supports</relationshipLabel>
        <relationshipName>Extended_Supports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Exhibit_Language__c</fullName>
        <label>Support Exhibit Language</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Fees__c</fullName>
        <description>Used to capture Support Fees.</description>
        <label>Support Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ver__c</fullName>
        <description>Place holder field used to shorten Product Version value.  Necessary to shorten compile length of Extended Support Begins	formula field.</description>
        <label>Ver</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_RUH__c</fullName>
        <description>Used by Roll Up Helper.  Used to capture Version from the Product record.</description>
        <label>Version RUH</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <formula>Product_Name__c &amp;&apos; &apos;&amp;  Version_RUH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waive_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to denote if fees should be waived.</description>
        <label>Waive Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X10_Payment_12_months__c</fullName>
        <formula>IF( ISPICKVAL(License__c,&apos;Perpetual&apos;),  (Support_Fees__c*0.10)/12, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Support_Fees__c*0.10)/12</inlineHelpText>
        <label>10% Payment (12 months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X180_Day_Email__c</fullName>
        <inlineHelpText>Used to trigger automatice email notification.
Old Value:  180 Day Email</inlineHelpText>
        <label>180 Day Notice of Ext Supp Payment Due</label>
        <picklist>
            <picklistValues>
                <fullName>Not Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X180_Day_Initial_Notification_Due__c</fullName>
        <description>Used to send email notification.
Old value : 180-Day Payment Notification Due</description>
        <label>180-Day Payment Notification for Ext Sup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X18_Month_Initial_Notification__c</fullName>
        <description>Used to send email notification.
18 Month Notice of Extended Support Begins.</description>
        <label>18 Month Notice Extended Support Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X18_Month_N__c</fullName>
        <inlineHelpText>Used to trigger automatic email notification.
Old value : 18 Month Email</inlineHelpText>
        <label>18 Month Extended Support Email</label>
        <picklist>
            <picklistValues>
                <fullName>Not Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X18_Month_Prior_Notification_of_Support__c</fullName>
        <formula>Date_Sustaining_Support_Begins__c - 548</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18-Month Prior Notification of Support</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X18_Month_Sustaining_Support_Email__c</fullName>
        <label>18 Month Sustaining Support Email</label>
        <picklist>
            <picklistValues>
                <fullName>Not Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X30_Payment_first_24_months__c</fullName>
        <formula>IF( ISPICKVAL( License__c,&apos;Term&apos; ), (Support_Fees__c * 0.30)/12 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Support Fees * 0.30)/12</inlineHelpText>
        <label>Extended Support Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X60_Payment_25_months__c</fullName>
        <formula>IF( ISPICKVAL( License__c , &apos;Term&apos;), ( Support_Fees__c * 0.60)/12, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Support Fees * 0.60) / 12</inlineHelpText>
        <label>60% Payment (25+ months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X90_Day_Email__c</fullName>
        <inlineHelpText>Used to trigger automatic email notification.</inlineHelpText>
        <label>90 Day Email</label>
        <picklist>
            <picklistValues>
                <fullName>Not Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X90_Day_Notification_of_Increased_fees__c</fullName>
        <description>Used to send email notification.</description>
        <label>90-Day Notification of Increased fees</label>
        <type>Date</type>
    </fields>
    <label>Extended Support</label>
    <nameField>
        <displayFormat>ES{000000}</displayFormat>
        <label>Extended Support Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extended Supports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>